--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 5vh;
+        font-size: 6vh;
     }
     
     .tasklist {
@@ -47,17 +47,19 @@
     
     .taskitem.completed {
         text-decoration: line-through;
-        color: #999;
+        color: #ffffff;
+        background-color: #9a9090;
     }
 </style>
 <body>
     <h1>Productivity Task Tracker</h1>
     <form id="carrot" action="#" method="post">
         <label for="task">Add a new task:</label>
-        <input type="text" id="task" name="task" placeholder="Enter your task here">
+        <input type="text" id="task" name="task" placeholder="enter your task here bro.">
         <button type="submit">Add New Task</button>
-    <p>Click on a task to mark it as completed.</p>
-    <p>Click again to unmark it.</p>
+    <p>Click on a task to mark it as completed</p>
+    <p>Click again to unmark it</p>
+    <p>Right Click on a task to delete it<p>
     <ul class="tasklist">
         <li class="taskitem">Example Task 1</li>
     </ul> 
@@ -79,10 +81,20 @@ carrot.addEventListener("submit", function(eveneteere) {
         newTaskItem.textContent = createtask;
         newTaskItem.addEventListener("click", function() {
             newTaskItem.classList.toggle("completed");
+        newTaskItem.addEventListener("contextmenu", function(event) {
+            event.preventDefault();
+            newTaskItem.remove();
+        });
         });
         document.querySelector(".tasklist").appendChild(newTaskItem);
-        taskInput.value = "";
+       taskInput.value = "";
 }
+});
+    document.querySelectorAll(".taskitem").forEach(function(taskitem) {
+    taskitem.addEventListener("contextmenu", function() {
+    event.preventDefault();
+    taskitem.remove();
+});
 });
 </script>
 </html>
