--- a/index.html
+++ b/index.html
@@ -85,20 +85,43 @@
     }
     label {
         margin-left: 20px;
+        background-color: #efa1a1;
+        border-radius: 20px;;
     }
     input, button {
         border-radius: 20px;
         border-color: #dd7575;
         color: #dd7575;
     }
+    button {
+        margin-left: 20px;
+    }
     .taskitem.completed {
         text-decoration: line-through;
         color: #ffffff;
         background-color: #9a9090;
     }
-</style>
+    .darkmode {
+        background-color: #1f1b24;
+        color: aliceblue;
+        .taskitem {
+            background-color: #383649;
+        }
+        .yum, .coolgradient, .coolgradient2 {
+            opacity: 75%;
+        }
+        label, input, button {
+            background-color: #383649;
+            color: aliceblue;
+        }
+        label {
+            border-radius: 20px;
+        }
+    }
+    </style>
 <body>
 <div class="coolgradient"></div>
+<button onclick="darkmode()">Toggle Dark Mode</button>
     <div class="yum">Productivity Task Tracker</div>
     <form id="carrot" action="#" method="post">
         <label for="task">Add a new task:</label>
@@ -113,6 +136,7 @@
     <div class="coolgradient2">made by Flappyfroggy on GitHub💕</div>
 </body>
 <script>
+loadDarkMode();
 const tasks_key = "tasks";
 let tasks = loadTasks();
 renderTasks();
@@ -150,7 +174,17 @@ function renderTasks() {
         taskList.appendChild(newTaskItem);
     });
 }
-
+function savedarkmode() {
+    const darkMode = document.body.classList.contains("darkmode");
+    localStorage.setItem("darkmode", darkMode);
+}
+function loadDarkMode() {
+    const darkmode = localStorage.getItem("darkmode")
+    if (darkmode === "true")
+    {
+        document.body.classList.add("darkmode");
+    }
+}
 const carrot = document.getElementById("carrot")
 carrot.addEventListener("submit", function(eveneteere) {
     eveneteere.preventDefault();
@@ -162,6 +196,10 @@ carrot.addEventListener("submit", function(eveneteere) {
         renderTasks();
         taskInput.value = "";  
     }
-        });     
+        });
+function darkmode() {
+    document.body.classList.toggle("darkmode");
+    savedarkmode();
+}  
 </script>
 </html>
