--- a/index.html
+++ b/index.html
@@ -157,10 +157,20 @@
     {
         font-style: italic;
         color: #b9fb3f;
+        display: inline-block;
+        border-radius: 5px;
+        padding: 2px 4px;
+        vertical-align: baseline;
+        line-height: 1;
     }
     .taskitem.date {
         font-style: italic;
         color: #ecf5a9;
+        display: inline-block;
+        border-radius: 5px;
+        padding: 2px 4px;
+        vertical-align: baseline;
+        line-height: 1;
     }
     </style>
 <body>
@@ -204,10 +214,14 @@ function renderTasks() {
     taskList.innerHTML = "";
     tasks.forEach(function(task, idx) {
         const newTaskItem = document.createElement("li");
-        newTaskItem.textContent = task.text;
+        const taskText = document.createTextNode(task.text);
+        newTaskItem.appendChild(taskText);
         newTaskItem.className = "taskitem";
         if (task.date) {
-            newTaskItem.textContent += " (Due: " + task.date + ")";
+            const datespan = document.createElement("span");
+            datespan.className = "taskitem date";
+            datespan.textContent += "Due: " + task.date;
+            newTaskItem.appendChild(datespan)
         }
         if (task.completed) {
             newTaskItem.classList.add("completed");
@@ -216,7 +230,11 @@ function renderTasks() {
             newTaskItem.classList.add("pastdate");
         }
         if (task.tag) {
-            newTaskItem.textContent += " [Tag: " + task.tag + "]";
+            const taskspan = document.createElement("span");
+            taskspan.className = "taskitem tag";
+            taskspan.textContent += task.tag;
+            newTaskItem.appendChild(taskspan);
+            
             
         }
         newTaskItem.addEventListener("click", function() {
