--- a/index.html
+++ b/index.html
@@ -71,10 +71,8 @@
         border: 1px solid #ddd;
         margin-bottom: 10px;
         padding: 10px;
+        text-align: center;
         border-radius: 15px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
         font-size: 25px;
         margin-left: 20px; 
         margin-right: 20px;
