--- a/index.html
+++ b/index.html
@@ -163,8 +163,10 @@
         .taskitem.pastdate:hover .taskitem.date,
         .taskitem.pastdate:hover #tasktext {
                 display: inline-block;
+                background-color: rgb(250, 76, 76);
+                color: #ffffff;
             }
-            #pasta {
+        .taskitem.pastdate:hover #pasta {
             display: none;
         }
     
