--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 <div class="coolgradient"></div>
 <button onclick="darkmode()">Toggle Dark Mode</button>
 <button onclick="greendarkmode()">Toggle Green Dark Mode</button>
-    <div class="yum">Achievr</div>
+    <div class="yum">Task Achievr</div>
     <form id="carrot" action="#" method="post">
         <label for="task">Add a new task:</label>
         <input type="text" id="task" name="task" placeholder="enter your task here💕">
@@ -245,9 +245,10 @@
     <p>Click again to unmark it</p>
     <p>Right Click on a task to delete it<p>
     <p>If a task is past it's due date, it will appear <span>red</span></p>
+    <p>every time you complete a task you get 10 xp</p>
     <p id="xpDisplay">you have 0 xp.</p>
     <ul class="tasklist">
-        <li class="taskitem">Example Task 1</li>
+        <li class="taskitem">Example Task 1</li></ul>
     <div class="coolgradient2">made by Flappyfroggy on GitHub💕</div>
 </body>
 <script>
@@ -338,6 +339,10 @@ function loadGreenDarkMode() {
         document.body.classList.add("greendarkmode");
     }
 }
+function updatexp() {
+    const xpDisplay = document.getElementById("xpDisplay");
+    xpDisplay.textContent = "wow! you have " + xp + " xp.";
+}
 const carrot = document.getElementById("carrot")
 carrot.addEventListener("submit", function(eveneteere) {
     eveneteere.preventDefault();
@@ -348,10 +353,13 @@ carrot.addEventListener("submit", function(eveneteere) {
     const createtag = document.getElementById("tag").value.trim();
 addEventListener("click", function() { 
     task.completed = !task.completed;
-    const xpdisplay = document.getElementById("xpDisplay");
-    let xp = Number(xpdisplay.textContent) || 0;
+    if (task.completed) {
     xp += 10;
-    xpdisplay.textContent = "Wow! You have " + xp; 
+    } else {
+    xp -= 10;
+    }
+    updatexp();
+    saveTasks();
 });
         if (createtask) { 
         tasks.push({ text: createtask, date: createdate, tag: createtag, completed: false });
