slightly brown text

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         }
     }
        #tasktext {
-            color: #000000;
+            color: #3b2d2d;
         }
         .taskitem.pastdate  {
         background-color: rgb(250, 76, 76);
