--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
     <p>Click again to unmark it</p>
     <p>Right Click on a task to delete it<p>
     <p>If a task is past it's due date, it will appear <span>red</span></p>
-    <p>every time you complete a task you get 10 xp, every 50 xp you level up!</p>
-    <p id="xpDisplay">you have 0 xp.</p>
-    <p id="xplevelup">you are at level 1</p>
+    <p>every time you complete a task you get 10 xp, and every 50 xp you level up!</p>
+    <p id="xpDisplay">you have 0 xp!</p>
+    <p id="xplevelup">you are at level 1!</p>
     <ul class="tasklist">
-    <li class="taskitem">Example Task 1</li></ul>
-    <div class="coolgradient2">made by Flappyfroggy on GitHub💕</div>
+    <li class="taskitem">Example Task One ~ Test me out!</li></ul>
+    <div class="coolgradient2">made by Flappyfroggy on GitHub💕🐸</div>
 </body>
 <script>
 let xp = parseInt(localStorage.getItem("xp")) || 0;
