--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
     <p>Click on a task to mark it as completed</p>
     <p>Click again to unmark it</p>
     <p>Right Click on a task to delete it<p>
+    <p>everything saves when you reload the page!</p>
     <p>If a task is past it's due date, it will appear <span>red</span></p>
     <p>every time you complete a task you get 10 xp, and every 50 xp you level up!</p>
     <p id="xpDisplay">you have 0 xp!</p>
